--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,14 +15,23 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build
-        run: ./make.sh
+        run: |
+          ./make.sh
+          ./make-h.sh
 
       - name: Make directories for upload-artifact
         run: |
           mkdir UDEAWN_${{ github.ref_name }}
           mv build/UDEAWN-* UDEAWN_${{ github.ref_name }}
+          mkdir UDEAWH_${{ github.ref_name }}
+          mv build/UDEAWH-* UDEAWH_${{ github.ref_name }}
 
       - uses: actions/upload-artifact@v3
         with:
           name: UDEAWN_${{ github.ref_name }}
           path: UDEAWN_${{ github.ref_name }}
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: UDEAWH_${{ github.ref_name }}
+          path: UDEAWH_${{ github.ref_name }}
