UDEAWNoを復活。つぶれる文字や不足文字をNotoEmojiから取込
EmojiOneBWは見やすい感じがするので

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
         run: |
           ./make-n.sh
           ./make-s.sh
+          ./make-o.sh
           ./make.sh
 
       - name: Make directories for upload-artifact
@@ -40,6 +41,13 @@ jobs:
           cp source/LICENSE_BIZUDGothic UDEAWNs_${{ github.ref_name }}
           cp source/NotoEmoji/OFL.txt UDEAWNs_${{ github.ref_name }}/LICENSE_NotoEmoji
           cp LICENSE_UDEAWNs UDEAWNs_${{ github.ref_name }}
+      - run: |
+          mkdir UDEAWNo_${{ github.ref_name }}
+          mv build/UDEAWNo-* UDEAWNo_${{ github.ref_name }}
+          cp source/LICENSE_BIZUDGothic UDEAWNo_${{ github.ref_name }}
+          cp source/LICENSE_EmojiOneBW UDEAWNo_${{ github.ref_name }}
+          cp source/NotoEmoji/OFL.txt UDEAWNo_${{ github.ref_name }}/LICENSE_NotoEmoji
+          cp LICENSE_UDEAWNo UDEAWNo_${{ github.ref_name }}
 
       - uses: actions/upload-artifact@v3
         with:
@@ -55,3 +63,8 @@ jobs:
         with:
           name: UDEAWNs_${{ github.ref_name }}
           path: UDEAWNs_${{ github.ref_name }}
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: UDEAWNo_${{ github.ref_name }}
+          path: UDEAWNo_${{ github.ref_name }}
