--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,8 @@ on: push
 jobs:
   build:
     runs-on: ubuntu-22.04
+    permissions:
+      contents: write # for gh release
     steps:
       - name: Install packages
         run: sudo apt-get install -y ttfautohint fontforge python2 python2-pip-whl
