--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,6 +83,6 @@ jobs:
 
       - name: Release
         if: startsWith(github.ref, 'refs/tags/')
-        run: gh release create ${{ github.ref_name }} -d ./UDEAWN*.zip
+        run: gh release create ${{ github.ref_name }} -d -t ${{ github.ref_name }} --generate-notes ./UDEAWN*.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
